move to java8, fix unit tests