@@ -4,6 +4,7 @@ import com.shelach.orders.data.Order;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -16,7 +17,7 @@ import java.util.List;
 public class FetchOrdersService {
     public List<Order> getProducts(String customerName) {
         log.info("Fetching products for customer {}", customerName);
-        return List.of(
+        return Arrays.asList(
                 new Order("עגבניות", "TOMATOES", "פירות", 0, 4.3),
                 new Order("מלפפונים", "Cucumbers", "ירקות", 0, 2D)
         );
